# decouple-stubs

./: README.md  pyproject.toml
examples/: types.py
src/decouple-stubs/: __init__.pyi
